fix: kotlin-maven-plugin content roots